<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".robot.GameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/voltage_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/voltageInfo"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/speed_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/speedInfo"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/sonar_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/distanceInfo"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/control"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/control_mode_spinner"
            style="@style/SpinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:entries="@array/control_modes"
            android:prompt="@string/control_mode" />

        <Spinner
            android:id="@+id/drive_mode_spinner"
            style="@style/SpinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:entries="@array/drive_modes"
            android:prompt="@string/drive_mode" />

        <Spinner
            android:id="@+id/speed_mode_spinner"
            style="@style/SpinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="2dp"
            android:entries="@array/speed_modes"
            android:prompt="@string/speed_mode" />

        <TextView
            android:id="@+id/control_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp"
            android:gravity="end"
            android:text="@string/control_info"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>