<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/robotTypeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/robot_type"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/robotTypeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/n_a"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <CheckBox
        android:id="@+id/refreshToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/refresh_toggle"
        android:padding="8dp" />

    <CheckBox
        android:id="@+id/usbToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/usb_toggle"
        android:padding="8dp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="8dp"
        android:alpha="0.5"
        android:background="@drawable/button_item_background_black" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/robot_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_weight="1"
        android:src="@drawable/ic_openbot"
        android:contentDescription="@string/robot_icon" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_margin="8dp"
        android:alpha="0.5"
        android:background="@drawable/button_item_background_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/batteryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="8dp"
            android:text="Sensors"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <CheckBox
        android:id="@+id/voltage_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="48dp"
        android:padding="4dp"
        android:text="@string/voltage_divider" />

    <CheckBox
        android:id="@+id/sonar_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="48dp"
        android:padding="4dp"
        android:text="@string/sonar" />

    <CheckBox
        android:id="@+id/bumpers_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="48dp"
        android:padding="4dp"
        android:text="@string/bumpers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/wheelOdometryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="8dp"
            android:text="Wheel Odometry"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/wheel_odometry_front_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:text="@string/front" />

        <CheckBox
            android:id="@+id/wheel_odometry_back_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/ledText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="8dp"
            android:text="LEDs"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/indicator_leds_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:text="@string/indicators" />

        <CheckBox
            android:id="@+id/leds_front_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:text="@string/front" />

        <CheckBox
            android:id="@+id/leds_back_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:text="@string/back" />

        <CheckBox
            android:id="@+id/leds_status_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:text="@string/status" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/readingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="8dp"
            android:text="Readings"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:text="@string/battery"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/voltage_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="4dp"
            android:gravity="end"
            android:text="@string/voltage"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/label_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:gravity="end"
            android:text="@string/speed"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/speed_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="4dp"
            android:gravity="end"
            android:text="@string/rpm"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/label_sonar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minHeight="48dp"
            android:padding="4dp"
            android:gravity="end"
            android:text="@string/sonar"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/sonar_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="4dp"
            android:gravity="end"
            android:text="@string/distance"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>