<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ai.AIFragment">

    <org.openbot.customview.OverlayView
        android:id="@+id/tracking_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aiBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        app:behavior_hideable="false"
        app:behavior_peekHeight="48dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:behavior_peekHeight="480dp">

        <View
            android:id="@+id/view"
            android:layout_width="48dp"
            android:layout_height="5dp"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:background="@drawable/button_item_background_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/auto_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Auto Mode"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/controllerContainer"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:text="Inference Time"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:text="@string/model"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:text="@string/device"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:text="@string/threads"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <TextView
                android:id="@+id/inference_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingHorizontal="8dp"
                android:text="@string/time_ms"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/model_spinner"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/models"
                android:prompt="@string/model" />

            <Spinner
                android:id="@+id/device_spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/devices"
                android:prompt="@string/device" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/minus"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_remove" />

                <TextView
                    android:id="@+id/threads"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/_1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/plus"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_add" />
            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/usbToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/usb_toggle"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/camera_toggle"
            app:layout_constraintEnd_toStartOf="@+id/camera_toggle"
            app:layout_constraintTop_toTopOf="@+id/camera_toggle" />

        <ImageView
            android:id="@+id/camera_toggle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/ic_cameraswitch"
            android:text="@string/camera_facing_back"
            app:layout_constraintBottom_toBottomOf="@+id/auto_switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/auto_switch"
            app:tint="@color/openBotBlue" />


        <include
            android:id="@+id/controllerContainer"
            layout="@layout/control_buttons" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>